# PalmSens_SDK

./: .gitignore  README.md  antora-playbook-dev.yml  antora-playbook.yml  gen_python_api.sh  justfile  package-lock.json  package.json
python/: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LoadSaveDataExample.py  MANIFEST.in  ManualControlExample.py  ManualControlExampleAsync.py  MeasurementExampleCA.py  MeasurementExampleCAAsync.py  MeasurementExampleCV.py  MeasurementExampleEIS.py  MeasurementExampleMethodSCRIPTSandbox.py  MeasurementExampleSWVversusOCP.py  MeasurementExampleStreamToCSV.py  MultiChannelHWSyncExample.py  MultiChannelMeasurementCustomLoopExample.py  MultiChannelMeasurementExample.py  MultiplexerExample.py  PSDummyCell_LSV.psmethod  README.adoc  README.md  build_docs.py  build_python_api_docs.py  build_type_stubs.ps1  cli.py  mkdocs.yml  parse_xml.py  pyproject.toml  requirements.txt  session_model.py  test.py  test_stream.py  zensical.toml
python/docs/: antora.yml  mkdocs.yml  requirements.txt  zensical.toml
python/examples/: MeasurementExampleCAAsync.py  MeasurementExampleEIS.py  async_measurement_CA_async.py  async_multichannel_csv_callback.py  async_multichannel_custom_loop.py  demo.py  demo_async.py  load_save_data.py  manual_control.py  manual_control_async.py  measurement_CA.py  measurement_CA_async.py  measurement_CV.py  measurement_EIS.py  measurement_MethodSCRIPT.py  measurement_MethodSCRIPT_sandbox.py  measurement_SWV_vs_OCP.py  measurement_abort.py  measurement_callback_async.py  measurement_status_callback.py  measurement_stream_to_csv.py  mixed_mode.py  multichannel_HW_sync.py  multichannel_csv_callback.py  multichannel_custom_loop.py  multichannel_measurement.py  multichannel_measurement_2.py  multichannel_measurement_custom_loop.py  multiplexer.py  test_examples.py
python/methodscript_examples/: console.py  plot_advanced_swv.py  plot_cv.py  plot_eis.py
python/pspython/: PalmSens.Core.xml  __init__.py  _shared.py  models.py  pspydata.py  pspyfiles.py  pspyinstruments.py  pspymethods.py
python/templates/: page.adoc.j2
python/tests/: array_test.py  conftest.py  (+36 more)
(+1227 files in other folders)
